<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/customsotetkek"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@color/customsotetkek">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regisztr_l_s"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/emailRegist"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/emailc_m"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/passwordRegist"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/jelszo"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/regisztralok"
                android:id="@+id/registButton"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/custompiros"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/marBejelentkezettSzoveg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Már van fiókod?"
                    android:textColor="@color/customsotetpiros"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/bejelentkezAtiranyit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:text="Jelentkezz be!"
                    android:textColor="@color/custompiros"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>